@@ -40,9 +40,9 @@
   <path id="base.path">
     <pathelement location="../lib/Adempiere.jar" />
     <pathelement location="../lib/CSTools.jar" />
-    <pathelement location="../tools/lib/j2ee.jar" />
+    <!--pathelement location="../tools/lib/j2ee.jar" /-->
 	<pathelement location="../tools/lib/jnlp.jar" />
-	<pathelement location="../tools/lib/servlet-api.jar" />
+	<pathelement location="../tools/lib/javax.servlet-api-4.0.1.jar" />
 	<pathelement location="../tools/lib/mail.jar" />
 	<pathelement location="../tools/lib/bsh-1.3.0.jar" />
 	<pathelement location="../tools/lib/junit.jar" />
@@ -72,7 +72,7 @@
 
     <!--	Compile all -->
     <javac
-      target="1.8" encoding="UTF-8"
+      target="11" encoding="UTF-8"
 	  destdir="${build.classes.dir}"
 	  debug="on"
 	  deprecation="off"
@@ -81,6 +81,7 @@
       <src path="${src.ejb.dir}"/>
       <src path="${src.servlet.dir}"/>
       <src path="${src.server.dir}"/>
+      <compilerarg line="--add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED"/>
     </javac>
 
   </target>
@@ -217,7 +218,7 @@
   <target name="compile.test" depends="adempiereRootCompile, clean.tests"
         if="${test.performTests}">
     <mkdir dir="${test.build.dir}"/>
-    <javac target="1.8" encoding="UTF-8" fork="true" includeantruntime="false" 
+    <javac target="11" encoding="UTF-8" fork="true" includeantruntime="false"
         destdir="${test.build.dir}" deprecation="on" debug="on" 
         memoryinitialsize="512m" memorymaximumsize="512m">
       <src path="${test.src}"/>
